--- a/anime_data_cleaning.ipynb
+++ b/anime_data_cleaning.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from pymongo import MongoClient\n",
     "import re\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +197,7 @@
        "4  Anime chuyển thể từ manga ngoại truyện cùng tê...  Mùa thu  phim lẻ  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +363,7 @@
        "5388  \\n\\nMột ngày nọ, Kei Nagai, một học sinh cấp b...  Mùa đông  phim bộ  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +430,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +513,7 @@
        "Name: count, Length: 124, dtype: int64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +815,7 @@
        "[1243 rows x 12 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -848,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +878,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1010,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1108,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1348,7 @@
        "0         301.0  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1359,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   title                                               link  \\\n",
+      "0  5-toubun no Hanayome*  https://animevietsub.page/phim/5-toubun-no-han...   \n",
+      "\n",
+      "                                               image episode   views quality  \\\n",
+      "0  https://cdn.animevietsub.page/data/poster/2024...       1  235236      HD   \n",
+      "\n",
+      "   year                                   genres  \\\n",
+      "0  2024  Shounen, School, Romance, Harem, Comedy   \n",
+      "\n",
+      "                                         description   season     type  rate  \\\n",
+      "0  Chuyến đi tuần trăng mật của Fuutarou Uesugi v...  Mùa thu  phim lẻ   9.6   \n",
+      "\n",
+      "   nums_of_vote  \n",
+      "0         301.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Xóa cột 'rating' khỏi DataFrame Pandas\n",
+    "data = data.drop(columns=[\"rating\"])\n",
+    "\n",
+    "# Kiểm tra kết quả\n",
+    "print(data.head(1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['id'] = range(1, len(data) + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = ['id'] + [col for col in data.columns if col != 'id']\n",
+    "data = data[cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1370,11 +1424,11 @@
       "Data columns (total 14 columns):\n",
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
-      " 0   title         5389 non-null   object \n",
-      " 1   link          5389 non-null   object \n",
-      " 2   image         5389 non-null   object \n",
-      " 3   episode       5389 non-null   object \n",
-      " 4   rating        5389 non-null   object \n",
+      " 0   id            5389 non-null   int64  \n",
+      " 1   title         5389 non-null   object \n",
+      " 2   link          5389 non-null   object \n",
+      " 3   image         5389 non-null   object \n",
+      " 4   episode       5389 non-null   object \n",
       " 5   views         5389 non-null   object \n",
       " 6   quality       5389 non-null   object \n",
       " 7   year          5389 non-null   object \n",
@@ -1384,7 +1438,7 @@
       " 11  type          5389 non-null   object \n",
       " 12  rate          5389 non-null   float64\n",
       " 13  nums_of_vote  5389 non-null   float64\n",
-      "dtypes: float64(2), object(12)\n",
+      "dtypes: float64(2), int64(1), object(11)\n",
       "memory usage: 589.5+ KB\n"
      ]
     }
@@ -1409,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1419,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -1431,11 +1485,11 @@
       "Data columns (total 14 columns):\n",
       " #   Column        Non-Null Count  Dtype  \n",
       "---  ------        --------------  -----  \n",
-      " 0   title         5389 non-null   object \n",
-      " 1   link          5389 non-null   object \n",
-      " 2   image         5389 non-null   object \n",
-      " 3   episode       5389 non-null   object \n",
-      " 4   rating        5389 non-null   object \n",
+      " 0   id            5389 non-null   int64  \n",
+      " 1   title         5389 non-null   object \n",
+      " 2   link          5389 non-null   object \n",
+      " 3   image         5389 non-null   object \n",
+      " 4   episode       5389 non-null   object \n",
       " 5   views         5389 non-null   int64  \n",
       " 6   quality       5389 non-null   object \n",
       " 7   year          5389 non-null   object \n",
@@ -1445,7 +1499,7 @@
       " 11  type          5389 non-null   object \n",
       " 12  rate          5389 non-null   float64\n",
       " 13  nums_of_vote  5389 non-null   int64  \n",
-      "dtypes: float64(1), int64(2), object(11)\n",
+      "dtypes: float64(1), int64(3), object(10)\n",
       "memory usage: 589.5+ KB\n"
      ]
     }
@@ -1456,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -1474,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -1488,6 +1542,37 @@
    "source": [
     "data.to_csv(csv_file_path, index=False)\n",
     "print(f\"Dữ liệu đã được lưu vào: {csv_file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dữ liệu đã được đưa lên MongoDB thành công!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Đường dẫn tới file CSV\n",
+    "csv_file_path = \"./data/cleaned/anime_data_cleaned.csv\"\n",
+    "\n",
+    "# Đọc dữ liệu từ file CSV\n",
+    "data = pd.read_csv(csv_file_path)\n",
+    "\n",
+    "# Kết nối tới MongoDB\n",
+    "client = MongoClient(\"mongodb://localhost:27017/\")\n",
+    "db = client[\"AnimeDB\"]\n",
+    "collection = db[\"anime_collection\"]\n",
+    "\n",
+    "data_dict = data.to_dict(\"records\")\n",
+    "collection.insert_many(data_dict)\n",
+    "\n",
+    "print(\"Dữ liệu đã được đưa lên MongoDB thành công!\")"
    ]
   }
  ],
