--- a/anime_watched_with_detail.ipynb
+++ b/anime_watched_with_detail.ipynb
@@ -44,27 +44,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1</td>\n",
-       "      <td>Tenchi Muyou! Manatsu no Eve, Tây Hành Kỷ: Ám ...</td>\n",
+       "      <td>Oruchuban Ebichu, Love Live! The School Idol M...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>Yu☆Gi☆Oh!: Sevens, Brave Story, Mecha-ude (TV)...</td>\n",
+       "      <td>Sengoku Otome: Momoiro Paradox, Hunter x Hunte...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
-       "      <td>Re:Zero kara Hajimeru Isekai Seikatsu, GetBack...</td>\n",
+       "      <td>Kawaikereba Hentai demo Suki ni Natte Kuremasu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>One Piece Film: Red, Horimiya Live Action, Gun...</td>\n",
+       "      <td>Gundam Breaker: Battlogue, Chén thánh: Đêm Địn...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
-       "      <td>Những Đứa Trẻ Đến Từ Thế Giới Khác OVA, Gankut...</td>\n",
+       "      <td>Mononoke, Sarusuberi: Miss Hokusai, Yokohama K...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -72,11 +72,11 @@
       ],
       "text/plain": [
        "   user_id                                     titles_watched\n",
-       "0        1  Tenchi Muyou! Manatsu no Eve, Tây Hành Kỷ: Ám ...\n",
-       "1        2  Yu☆Gi☆Oh!: Sevens, Brave Story, Mecha-ude (TV)...\n",
-       "2        3  Re:Zero kara Hajimeru Isekai Seikatsu, GetBack...\n",
-       "3        4  One Piece Film: Red, Horimiya Live Action, Gun...\n",
-       "4        5  Những Đứa Trẻ Đến Từ Thế Giới Khác OVA, Gankut..."
+       "0        1  Oruchuban Ebichu, Love Live! The School Idol M...\n",
+       "1        2  Sengoku Otome: Momoiro Paradox, Hunter x Hunte...\n",
+       "2        3  Kawaikereba Hentai demo Suki ni Natte Kuremasu...\n",
+       "3        4  Gundam Breaker: Battlogue, Chén thánh: Đêm Địn...\n",
+       "4        5  Mononoke, Sarusuberi: Miss Hokusai, Yokohama K..."
       ]
      },
      "execution_count": 2,
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -324,98 +324,98 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        user_id                                  titles_watched  \\\n",
-      "0             1                    Tenchi Muyou! Manatsu no Eve   \n",
-      "1             1                    Tây Hành Kỷ: Ám Ảnh Ma Thành   \n",
-      "2             1  Aikatsu! 10th Story: Mirai e no Starway (2023)   \n",
-      "3             1              Cardfight!! Vanguard: Shinemon-hen   \n",
-      "4             1                              Tuyết Ưng Lĩnh Chủ   \n",
-      "...         ...                                             ...   \n",
-      "105755     9999                       Ta Có Thể Giác Ngộ Vô Hạn   \n",
-      "105756    10000                                       Sky Girls   \n",
-      "105757    10000                                       Teekyuu 2   \n",
-      "105758    10000                                     Dennou Coil   \n",
-      "105759    10000                           Học Viện Đỏ Đen Mùa 2   \n",
+      "        user_id                              titles_watched  \\\n",
+      "0             1                            Oruchuban Ebichu   \n",
+      "1             1            Love Live! The School Idol Movie   \n",
+      "2             1                                   Handa-kun   \n",
+      "3             1                                  New Game!!   \n",
+      "4             1                                      Levius   \n",
+      "...         ...                                         ...   \n",
+      "105810    10000                             Fairy Tail Zero   \n",
+      "105811    10000         Bức Thư Từ Thế Giới Bên Kia Special   \n",
+      "105812    10000                     Naruto: Sức Mạnh Vĩ Thú   \n",
+      "105813    10000  Doraemon Movie 23: Nobita to Robot Kingdom   \n",
+      "105814    10000                           Kamen Rider Geats   \n",
       "\n",
       "                                                     link  \\\n",
-      "0       https://animevietsub.page/phim/tenchi-muyou-ma...   \n",
-      "1       https://animevietsub.page/phim/tay-hanh-ky-am-...   \n",
-      "2       https://animevietsub.page/phim/aikatsu-10th-st...   \n",
-      "3       https://animevietsub.page/phim/cardfight-vangu...   \n",
-      "4       https://animevietsub.page/phim/tuyet-ung-linh-...   \n",
+      "0       https://animevietsub.page/phim/oruchuban-ebich...   \n",
+      "1       https://animevietsub.page/phim/love-live-the-s...   \n",
+      "2        https://animevietsub.page/phim/handa-kun-i2-a24/   \n",
+      "3        https://animevietsub.page/phim/new-game-2-a1842/   \n",
+      "4            https://animevietsub.page/phim/levius-a3929/   \n",
       "...                                                   ...   \n",
-      "105755  https://animevietsub.page/phim/ta-co-the-giac-...   \n",
-      "105756     https://animevietsub.page/phim/sky-girls-a281/   \n",
-      "105757    https://animevietsub.page/phim/teekyuu-2-a2529/   \n",
-      "105758   https://animevietsub.page/phim/dennou-coil-a730/   \n",
-      "105759  https://animevietsub.page/phim/hoc-vien-do-den...   \n",
+      "105810  https://animevietsub.page/phim/hoi-phap-su-pha...   \n",
+      "105811  https://animevietsub.page/phim/buc-thu-tu-the-...   \n",
+      "105812  https://animevietsub.page/phim/naruto-suc-manh...   \n",
+      "105813  https://animevietsub.page/phim/doraemon-movie-...   \n",
+      "105814  https://animevietsub.page/phim/kamen-rider-gea...   \n",
       "\n",
       "                                                    image   episode  \\\n",
-      "0       https://cdn.animevietsub.page/data/poster/2017...         1   \n",
-      "1       https://cdn.animevietsub.page/data/poster/2023...         1   \n",
-      "2       https://cdn.animevietsub.page/data/poster/2023...         1   \n",
-      "3       https://cdn.animevietsub.page/data/poster/2020...  HOÀN TẤT   \n",
-      "4       https://cdn.animevietsub.page/data/poster/2018...  HOÀN TẤT   \n",
+      "0       https://cdn.animevietsub.page/data/poster/2018...     TẬP 5   \n",
+      "1       https://cdn.animevietsub.page/data/poster/2017...         1   \n",
+      "2       https://cdn.animevietsub.page/data/poster/2017...  HOÀN TẤT   \n",
+      "3       https://cdn.animevietsub.page/data/poster/2017...  HOÀN TẤT   \n",
+      "4       https://cdn.animevietsub.page/data/poster/2020...  HOÀN TẤT   \n",
       "...                                                   ...       ...   \n",
-      "105755  https://cdn.animevietsub.page/data/poster/2024...    TẬP 28   \n",
-      "105756  https://cdn.animevietsub.page/data/poster/2017...  HOÀN TẤT   \n",
-      "105757  https://cdn.animevietsub.page/data/poster/2017...  HOÀN TẤT   \n",
-      "105758  https://cdn.animevietsub.page/data/poster/2017...  HOÀN TẤT   \n",
-      "105759  https://cdn.animevietsub.page/data/poster/2018...  HOÀN TẤT   \n",
+      "105810  https://cdn.animevietsub.page/data/poster/2017...  HOÀN TẤT   \n",
+      "105811  https://cdn.animevietsub.page/data/poster/2017...         1   \n",
+      "105812  https://cdn.animevietsub.page/data/poster/2017...  HOÀN TẤT   \n",
+      "105813  https://cdn.animevietsub.page/data/poster/2017...         1   \n",
+      "105814  https://cdn.animevietsub.page/data/poster/2022...  HOÀN TẤT   \n",
       "\n",
-      "                                                  rating    views quality  \\\n",
-      "0          10 trong số 10 dựa trên 1 thành viên đánh giá    19564      SD   \n",
-      "1           7 trong số 10 dựa trên 9 thành viên đánh giá    61929      HD   \n",
-      "2        9.4 trong số 10 dựa trên 28 thành viên đánh giá   107615      HD   \n",
-      "3           4 trong số 10 dựa trên 3 thành viên đánh giá    27261      HD   \n",
-      "4        8.1 trong số 10 dựa trên 25 thành viên đánh giá   462809      HD   \n",
-      "...                                                  ...      ...     ...   \n",
-      "105755   7.5 trong số 10 dựa trên 13 thành viên đánh giá   195009      HD   \n",
-      "105756    8.2 trong số 10 dựa trên 5 thành viên đánh giá    36711      HD   \n",
-      "105757      7 trong số 10 dựa trên 3 thành viên đánh giá    20143      HD   \n",
-      "105758    7.1 trong số 10 dựa trên 7 thành viên đánh giá    29993      HD   \n",
-      "105759  9.5 trong số 10 dựa trên 106 thành viên đánh giá  1183421      HD   \n",
+      "                                                  rating     views  quality  \\\n",
+      "0           7 trong số 10 dựa trên 3 thành viên đánh giá     40403       HQ   \n",
+      "1        9.6 trong số 10 dựa trên 30 thành viên đánh giá     54403       BD   \n",
+      "2       9.5 trong số 10 dựa trên 129 thành viên đánh giá    956472       HD   \n",
+      "3        9.5 trong số 10 dựa trên 74 thành viên đánh giá    141115       BD   \n",
+      "4         5.5 trong số 10 dựa trên 2 thành viên đánh giá     23201       HD   \n",
+      "...                                                  ...       ...      ...   \n",
+      "105810   9.1 trong số 10 dựa trên 49 thành viên đánh giá    702369       HD   \n",
+      "105811    9.5 trong số 10 dựa trên 6 thành viên đánh giá     19154       HD   \n",
+      "105812  9.4 trong số 10 dựa trên 549 thành viên đánh giá  21079803       HD   \n",
+      "105813    9.3 trong số 10 dựa trên 9 thành viên đánh giá    130171       SD   \n",
+      "105814  9.6 trong số 10 dựa trên 225 thành viên đánh giá   8751301  Full HD   \n",
       "\n",
       "        year                                             genres  \\\n",
-      "0       1997             Shounen, Sci-Fi, Space, Comedy, Action   \n",
-      "1       2023                Cartoon, Fantasy, Adventure, Action   \n",
-      "2       2023                                              Music   \n",
-      "3       2019                              Shounen, Game, Action   \n",
-      "4       2018                                            Cartoon   \n",
+      "0       1999                              Seinen, Ecchi, Comedy   \n",
+      "1       2015                       School, Slice of Life, Music   \n",
+      "2       2016                     Shounen, Slice of Life, Comedy   \n",
+      "3       2017                              Slice of Life, Comedy   \n",
+      "4       2019        Seinen, Sci-Fi, Mecha, Martial Arts, Action   \n",
       "...      ...                                                ...   \n",
-      "105755  2024                                            Cartoon   \n",
-      "105756  2007                            Sci-Fi, Military, Mecha   \n",
-      "105757  2013                    Shounen, School, Sports, Comedy   \n",
-      "105758  2007          Sci-Fi, Drama, Comedy, Adventure, Mystery   \n",
-      "105759  2019  Shounen, School, Psychological, Game, Drama, M...   \n",
+      "105810  2016  Shounen, Fantasy, Comedy, Adventure, Magic, Ac...   \n",
+      "105811  2008            Thriller, Psychological, Fantasy, Drama   \n",
+      "105812  2007  Shounen, Super Power, Comedy, Martial Arts, Ac...   \n",
+      "105813  2002          Shounen, Fantasy, Comedy, Adventure, Kids   \n",
+      "105814  2022  Sci-Fi, Tokusatsu, Fantasy, Drama, Comedy, Adv...   \n",
       "\n",
       "                                              description    season     type  \\\n",
-      "0                                           Đang cập nhật    Mùa hè  phim lẻ   \n",
-      "1       Ma Anh chủ nhân nhân của Ám Ảnh ma thành vì mu...  Mùa xuân  phim lẻ   \n",
-      "2       Aikatsu mới! phim lấy bối cảnh năm 2023 sau Ai...  Mùa đông  phim lẻ   \n",
-      "3       Đây là câu chuyện về \"Shinemon Nitta\", người q...  Mùa đông  phim bộ   \n",
-      "4       Bước chân của người khổng lồ sống giữa dòng du...  Mùa xuân  phim bộ   \n",
+      "0       Ebichu là con vật cưng hoàn hảo: cô làm sạch, ...    Mùa hè  phim bộ   \n",
+      "1       Tiếp nối câu chuyện của Season 2. Câu chuyện c...  Mùa xuân  phim lẻ   \n",
+      "2                 Thời trẻ trâu của Handa Sei (Barakamon)    Mùa hè  phim bộ   \n",
+      "3                     Mùa thứ 2 của Series phim New Game!    Mùa hè  phim bộ   \n",
+      "4       Khi xã hội trỗi dậy từ đống tro tàn của chiến ...  Mùa xuân  phim bộ   \n",
       "...                                                   ...       ...      ...   \n",
-      "105755  Nhờ có sự dũng cảm hơn người, khí phách anh hù...   Mùa thu  phim bộ   \n",
-      "105756  Câu truyện nói về thời kì lần thứ 3 con người ...    Mùa hè  phim bộ   \n",
-      "105757  Một đống chuyện hài về những cô gái trong CLB ...    Mùa hè  phim bộ   \n",
-      "105758  Trong tương lai, công nghệ phát triển vượt bậc...  Mùa xuân  phim bộ   \n",
-      "105759                            Phần hai của Kakegurui.  Mùa xuân  phim bộ   \n",
+      "105810  Phần tiếp theo của phim Fairy Tail, Câu chuyện...  Mùa đông  phim bộ   \n",
+      "105811                             Tập 13 của Shigofumi .  Mùa đông  phim lẻ   \n",
+      "105812  Tiếp nối phần I sau khi cậu bé cùng sư phụ Jir...  Mùa đông  phim bộ   \n",
+      "105813  Nhóm bạn Đôrêmon gặp một cậu bé robot kì lạ đế...  Mùa đông  phim lẻ   \n",
+      "105814  \"Desire Grand Prix\" là một trò chơi nhằm bảo v...    Mùa hè  phim bộ   \n",
       "\n",
       "        rate  nums_of_vote  \n",
-      "0       10.0             1  \n",
-      "1        7.0             9  \n",
-      "2        9.4            28  \n",
-      "3        4.0             3  \n",
-      "4        8.1            25  \n",
+      "0        7.0             3  \n",
+      "1        9.6            30  \n",
+      "2        9.5           129  \n",
+      "3        9.5            74  \n",
+      "4        5.5             2  \n",
       "...      ...           ...  \n",
-      "105755   7.5            13  \n",
-      "105756   8.2             5  \n",
-      "105757   7.0             3  \n",
-      "105758   7.1             7  \n",
-      "105759   9.5           106  \n",
+      "105810   9.1            49  \n",
+      "105811   9.5             6  \n",
+      "105812   9.4           549  \n",
+      "105813   9.3             9  \n",
+      "105814   9.6           225  \n",
       "\n",
-      "[105760 rows x 15 columns]\n"
+      "[105815 rows x 15 columns]\n"
      ]
     }
    ],
